style: implement styling fixes on the browser scrollbar

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -28,7 +28,7 @@
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #f5f5f5;
+  background-color: #f3f4f6;
   border-radius: 10px;
 }
 
@@ -41,10 +41,15 @@
   background-color: #b3b3b3;
 }
 
-/* For other browsers */
+/* for other browsers */
 * {
   scrollbar-width: thin;
-  scrollbar-color: #cdcdcd #f5f5f5;
+  scrollbar-color: #cdcdcd #f3f4f6;
+}
+
+*::-moz-scrollbar-track {
+  background-color: #f3f4f6;
+  border-radius: 10px;
 }
 
 *::-moz-scrollbar-thumb {
@@ -54,9 +59,4 @@
 
 *::-moz-scrollbar-thumb:hover {
   background-color: #b3b3b3;
-}
-
-*::-moz-scrollbar-track {
-  background-color: #f5f5f5;
-  border-radius: 10px;
 }
